#pragma once

class Lcd2004
{
public:
    Lcd2004();
    ~Lcd2004() = default;
};
