#include "IDomainModel.hpp"

IDomainModel::IDomainModel() 
{
}

IDomainModel::~IDomainModel() 
{
}